--- a/httpexam/template.jade
+++ b/httpexam/template.jade
@@ -9,5 +9,5 @@ html
         hr
         - for(var i = 0; i < 10; i++) {
             p
-                a(href="http://hanbit.co.kr") Go to Hanbit #{i}
+                a(href="http://hanbit.co.kr") Go To Hanbit #{i}
         - }
